Fix list size bug